--- a/package.json
+++ b/package.json
@@ -95,14 +95,14 @@
     "eslint-import-resolver-node": "^0.3.1",
     "eslint-loader": "^1.8.0",
     "eslint-plugin-css-modules": "^2.7.1",
-    "eslint-plugin-flowtype": "^2.32.1",
-    "eslint-plugin-import": "^2.6.0",
+    "eslint-plugin-flowtype": "^2.34.1",
+    "eslint-plugin-import": "^2.6.1",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
     "file-loader": "^0.11.2",
     "front-matter": "^2.1.2",
     "glob": "^7.1.2",
-    "husky": "^0.14.2",
+    "husky": "^0.14.1",
     "lint-staged": "^4.0.0",
     "markdown-it": "^8.3.1",
     "mkdirp": "^0.5.1",
@@ -112,7 +112,7 @@
     "opn-cli": "^3.1.0",
     "pixrem": "^3.0.2",
     "pleeease-filters": "^4.0.0",
-    "postcss": "^6.0.3",
+    "postcss": "^6.0.4",
     "postcss-calc": "^6.0.0",
     "postcss-color-function": "^4.0.0",
     "postcss-custom-media": "^6.0.0",
@@ -127,10 +127,9 @@
     "postcss-pseudoelements": "^4.0.0",
     "postcss-selector-matches": "^3.0.1",
     "postcss-selector-not": "^3.0.1",
-    "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
     "react-deep-force-update": "^2.0.1",
-    "react-error-overlay": "^1.0.8",
+    "react-error-overlay": "^1.0.9",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-test-renderer": "^15.5.4",
     "relay-compiler": "^1.1.0",
@@ -192,20 +191,23 @@
   "scripts": {
     "update-schema": "babel-node tools/run updateSchema",
     "precommit": "lint-staged",
-    "lint:js": "eslint --ignore-path .gitignore --ignore-pattern \"!**/.*\" .",
-    "lint:css": "stylelint \"src/**/*.{css,less,scss,sss}\"",
-    "lint": "yarn run lint:js && yarn run lint:css",
+    "lint-js": "eslint --ignore-path .gitignore --ignore-pattern \"!**/.*\" .",
+    "lint-css": "stylelint \"src/**/*.{css,less,scss,sss}\"",
+    "lint": "yarn run lint-js && yarn run lint-css",
+    "fix-js": "yarn run lint-js -- --fix",
+    "fix-css": "yarn run lint-css -- --fix",
+    "fix": "yarn run fix-js && yarn run fix-css",
     "test": "mocha",
-    "test:watch": "yarn run test -- --reporter min --watch",
-    "test:cover": "cross-env NODE_ENV=test nyc npm run test",
-    "coverage": "yarn run test:cover && nyc report --reporter=html && opn coverage/index.html",
+    "test-watch": "yarn run test -- --reporter min --watch",
+    "test-cover": "cross-env NODE_ENV=test nyc npm run test",
+    "coverage": "yarn run test-cover && nyc report --reporter=html && opn coverage/index.html",
     "relay": "relay-compiler --src ./src/ --schema ./cache/schema.json",
     "relay:watch": "relay-compiler --watch --src ./src/ --schema ./cache/schema.json",
     "clean": "babel-node tools/run clean",
     "copy": "babel-node tools/run copy",
     "bundle": "babel-node tools/run bundle",
     "build": "babel-node tools/run build",
-    "build:stats": "yarn run build -- --release --analyse",
+    "build-stats": "yarn run build -- --release --analyse",
     "serve": "babel-node tools/run runServer",
     "start": "babel-node tools/run start"
   }
